Update issue templates

--- a/.github/ISSUE_TEMPLATE/錯誤回報.md
+++ b/.github/ISSUE_TEMPLATE/錯誤回報.md
@@ -7,34 +7,34 @@ assignees: ''
 
 ---
 
-軟體版本與取得方式：
+### 軟體版本與取得方式：
 安裝器版本（例如壓縮包名稱、下載來源與日期）
 
-系統環境：
+### 系統環境：
 Windows 版本（Win+R 輸入winver 可以看到版本 如24H2之類的）
 
-發生問題的是首次開啟或之後更新：
+### 發生問題的是首次開啟或之後更新：
 
-彩虹 UI 更新器放置的位置：
+### 彩虹 UI 更新器放置的位置：
 你將更新器放置在哪個路徑
 
-GitHub Token 使用情況：
+### GitHub Token 使用情況：
 是否勾選「使用 GitHub Token」；若有，請貼上主視窗日誌顯示的「剩餘/上限」額度資訊。​
 
-復現步驟：
+### 復現步驟：
 逐步描述你如何操作到出錯（例如：開啟程式→選擇 WoW 啟動器→按「開始」→等待檢查/下載→出現異常）。
 
-期望行為：
+### 期望行為：
 你原本預期會發生的結果。
 
-實際行為：
+### 實際行為：
 實際看到的結果；若有錯誤訊息，請貼出主視窗狀態列的文字或對話框內容截圖。​
 
-設定檔：
+### 設定檔：
 請打開更新器同資料夾中的 rainbow_config.json 內容貼到這裡。​
 
-網路環境：
+### 網路環境：
 是否使用代理、防火牆/端點安全軟體、公司/宿舍網路、下載時段，若不知道則不知道。
 
-其他補充：
+### 其他補充：
 任何臨時繞法、特殊系統設定、與其他插件或工具的交互影響。
